# qdrant-protos

./: .gitignore  README.md  docker-compose.yml  image_search_app.py  pyproject.toml  qdrant-first.ipynb  qdrant_and_audio.ipynb  qdrant_and_images.ipynb  qdrant_and_text_data.ipynb  requirements.txt
